# radio-station-db

./: .env.example  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  radio_stations.db
.github/workflows/: daily-genre-detection.yml  update-licenses.yml
src/: __init__.py  cli.py  database.py  fcc_parser.py  genre_detector.py  schema.sql  test_fcc_api.py
src/radio_station_db/: __init__.py
