[project]
name = "radio-station-db"
version = "0.1.0"
description = "Radio station database with FCC data, LLM genre estimation, and signal propagation"
authors = [
    { name = "Kyle Krcmaric", email = "kyle.krcmaric@ozmoapp.com" }
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
radio-db = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip-licenses>=5.0.0",
]

[tool.rye.scripts]
update-licenses = "pip-licenses --format markdown --output-file THIRD_PARTY_NOTICES.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
